@startuml
'https://plantuml.com/class-diagram
skinparam sequenceMessageAlign center
title TO CREATE NEW PROFILE
legend top
US001 - As Administrator, I want to create user profiles.
end legend

class "CreateProfileController" {
-company
+createProfile(profileName)
}

class "Company" {
-profileContainer
+createProfile(profileName)
}

class "ProfileContainer"{
-profiles
+createProfile(profileName)
+addProfile(profile)
}

class "Profile"{
-profileName
+createProfile(name)
}

"CreateProfileController" ..>  "Company"
"Company" "1"-->"1" "ProfileContainer": has
"ProfileContainer" "1" --> "*" "Profile": contains

@enduml